# p2p-bitcoin-handshake

./: .gitignore  Cargo.toml  Readme.md  Solution.md  Task.md
net/: Cargo.toml
net/src/: conversation.rs  error.rs  lib.rs
net/src/wire_protocol/: buffer.rs  connection.rs  handshake.rs  messages.rs  mod.rs  node.rs  raw_message.rs
node-handshake/: Cargo.toml
node-handshake/src/: main.rs  node.rs
src/: main.rs
src/peer/: buffer.rs  connection.rs  conversation.rs  mod.rs  wire_protocol.rs
